--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li class="active"><a href="about.html">ABOUT</a></li>
                 <li><a href="services.html">PRICING</a></li>
                 <li><a href="freestuff.html">FREE STUFFS</a></li>
                 <li><a href="samples.html">SAMPLES</a></li>
@@ -91,7 +91,7 @@
                 ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด
             </p><p>
                 Motion Square Music ก่อตั้งโดยฟิว และ บิว ที่เริ่มต้นรู้จักและทำงานด้วยกันเมื่อปี 2012 ในงานดนตรีประกอบซีรี่ยส์เรื่องหนึ่ง และจากนั้นเราก็แลกเปลี่ยนความคิดกัน
-                จนมาคิดว่เราควรจะทำ Music Library สำหรับลูกค้าที่ต้องการงานเร่งรีบบ้าง งานถูกบ้าง เพื่อประกอบในงานภาพยนต์โดยไม่ต้องห่วงเรื่องลิขสิทธิ์ แทนที่จะไปเอาเพลงของ                 คนอื่นมาอย่างผิดกฏหมาย เราทำงานกันออนไลน์ทั่วโลกผ่านอินเทอร์เน็ต และขณะนี้ทั้งฟิวและบิวก็กำลังศึกษาต่อที่สหรัฐอเมริกาด้านดนตรีโดยตรง</p>
+                จนมาคิดว่าเราควรจะทำ Music Library สำหรับลูกค้าที่ต้องการงานเร่งรีบบ้าง งานถูกบ้าง เพื่อประกอบในงานภาพยนต์โดยไม่ต้องห่วงเรื่องลิขสิทธิ์ แทนที่จะไปเอาเพลงของ                 คนอื่นมาอย่างผิดกฏหมาย เราทำงานกันออนไลน์ทั่วโลกผ่านอินเทอร์เน็ต และขณะนี้ทั้งฟิวและบิวก็กำลังศึกษาต่อที่สหรัฐอเมริกาด้านดนตรีโดยตรง</p>
             <blockquote>
                 <p>&ldquo;Let the music moves your emotion&rdquo;</p>
             </blockquote>
@@ -125,7 +125,7 @@
                 <!-- he view -->
             </div>
             <!-- he wrap -->
-            <h4>Chapavich “Phil” Temnitikul</h4>
+            <h4>Chapavich “Phil” Temnitikul</h4> <div class="hline"></div>
             <!--<h5 class="ctitle">LEAD DEVELOPER</h5>-->
             <p class="text-justify"> สำเร็จการศึกษาปริญญาตรีด้านการประพันธ์เพลงจากมหาวิทยาลัยรังสิต
                 เคยได้รับทุนการศึกษาจากเยอรมันเพื่อไปเข้าร่วม workshop
@@ -139,7 +139,6 @@
                 <br><br>
                 ปัจจุบันเป็นนักแต่งเพลงอิสระและกำลังศึกษาต่อที่ UCLA สหรัฐอเมริกา ด้านดนตรีประกอบภาพยนต์</p>
 
-            <div class="hline"></div>
         </div>
         <! --/col-lg-3 -->
 
@@ -157,7 +156,7 @@
                 <!-- he view -->
             </div>
             <!-- he wrap -->
-            <h4>Piyatut “Bill” Hemstapat</h4>
+            <h4>Piyatut “Bill” Hemstapat</h4> <div class="hline"></div>
             <!--<h5 class="ctitle">MARKETING</h5>-->
             <p class="text-justify"> ได้รับเลือกโดย American Society of Composer and Publisher (ASCAP)
                 ให้เป็นนักแต่งเพลงที่น่าจับตามองแห่งปี (Composer to watch) ในปี 2013
@@ -168,8 +167,6 @@
                 <br><br>
                 ปิยทัศน์จบการศึกษาจากวิทยาลัยดุริยางคศิลป์ ม.มหิดล และขณะนี้กำลังศึกษาต่อในแขนง Commercial Music
                 Production ที่ College-Conservatory of Music University of Cincinnati</p>
-
-            <div class="hline"></div>
         </div>
         <! --/col-lg-3 -->
 
