--- a/services.html
+++ b/services.html
@@ -43,9 +43,9 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="services.html">PRICING</a></li>
+                <li class="active"><a href="services.html">PRICING</a></li>
                 <li><a href="freestuff.html">FREE STUFFS</a></li>
                 <li><a href="samples.html">SAMPLES</a></li>
             </ul>
