--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1>Motion Square Music</h1>
-                <h5>Stock music for Game, Film & Multimedia</h5>
+                <br><h1>Motion Square Music</h1>
+                <h5>Stock music for Game, Film & Multimedia</h5><br>
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
                 <img src="assets/img/desktop.png" class="img-responsive">
