javascript moved, fix comment

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                 <li><a href="samples.html">SAMPLES</a></li>
                 <li><a href="freestuff.html">FREE STUFFS</a></li>
             </ul>
-        </div>
-        <!--/.nav-collapse -->
+        </div><!--/.nav-collapse -->
     </div>
 </div>
 
@@ -67,12 +66,9 @@
             <div class="col-lg-8 col-lg-offset-2 himg">
                 <img src="assets/img/desktop.png" class="img-responsive">
             </div>
-        </div>
-        <!-- /row -->
-    </div>
-    <!-- /container -->
-</div>
-<!-- /headerwrap -->
+        </div><!-- /row -->
+    </div><!-- /container -->
+</div><!-- /headerwrap -->
 
 <!-- *****************************************************************************************************************
  MIDDLE CONTENT
@@ -100,11 +96,8 @@
         <div class="col-lg-6">
             <img class="img-responsive" src="assets/img/agency.jpg" alt="">
         </div>
-
-    </div>
-    <!--/row -->
-</div>
-<!--/container -->
+    </div><!--/row -->
+</div><!--/container -->
 
 <!-- *****************************************************************************************************************
  PORTFOLIO SECTION
@@ -123,16 +116,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_09.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item web-design">
                 <div class="he-wrap tpl6">
@@ -143,16 +132,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Web Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_02.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item graphic-design">
                 <div class="he-wrap tpl6">
@@ -163,16 +148,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_03.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item graphic-design">
                 <div class="he-wrap tpl6">
@@ -183,16 +164,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_04.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item books">
                 <div class="he-wrap tpl6">
@@ -203,16 +180,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_05.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item graphic-design">
                 <div class="he-wrap tpl6">
@@ -223,16 +196,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_06.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item books">
                 <div class="he-wrap tpl6">
@@ -243,16 +212,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_07.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item graphic-design">
                 <div class="he-wrap tpl6">
@@ -263,16 +228,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_08.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item web-design">
                 <div class="he-wrap tpl6">
@@ -283,16 +244,12 @@
                             <h3 class="a1" data-animate="fadeInDown">A Web Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_01.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
 
             <div class="portfolio-item books">
                 <div class="he-wrap tpl6">
@@ -303,23 +260,15 @@
                             <h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_10.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
                                     class="fa fa-link"></i></a>
-                        </div>
-                        <!-- he bg -->
-                    </div>
-                    <!-- he view -->
-                </div>
-                <!-- he wrap -->
-            </div>
-            <!-- end col-12 -->
-
-        </div>
-        <!-- portfolio -->
-    </div>
-    <!-- portfolio container -->
-</div>
-<!--/Portfoliowrap -->
+                        </div><!-- he bg -->
+                    </div><!-- he view -->
+                </div><!-- he wrap -->
+            </div><!-- end col-12 -->
+        </div><!-- portfolio -->
+    </div><!-- portfolio container -->
+</div><!--/Portfoliowrap -->
 
 <!-- *****************************************************************************************************************
  SERVICE LOGOS
@@ -334,37 +283,31 @@
                 <h4>Stock Music</h4>
 
                 <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
-                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <i class="fa fa-flask"></i>
                 <h4>Loop Music</h4>
 
                 <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
-                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <i class="fa fa-trophy"></i>
                 <h4>Original Score</h4>
 
                 <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
-                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <i class="fa fa-trophy"></i>
                 <h4>Mock Up Score</h4>
 
                 <p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
-                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
             </div>
         </div>
         <div class="row centered">
             <br><a href="services.html" class="btn btn-theme">More Service Information</a>
         </div>
-    </div>
-    <!--/sub container -->
-</div>
-<!--/service -->
+    </div><!--/sub container -->
+</div><!--/service -->
 
 
 <!-- *****************************************************************************************************************
@@ -384,12 +327,9 @@
 
                 <p>Music Composer</p>
             </div>
-        </div>
-        <!--/row -->
-    </div>
-    <!--/container -->
-</div>
-<!--/twrap -->
+        </div><!--/row -->
+    </div><!--/container -->
+</div><!--/twrap -->
 
 <!-- *****************************************************************************************************************
  FOOTER
@@ -442,7 +382,7 @@
 <script src="assets/js/custom.js"></script>
 
 
-<script>
+<!--<script>
     // Portfolio
     (function ($) {
         "use strict";
@@ -522,6 +462,6 @@
             setPortfolio();
         });
     })(jQuery);
-</script>
+</script>-->
 </body>
 </html>
