--- a/services.html
+++ b/services.html
@@ -71,9 +71,7 @@
 <div class="container mtb">
     <div class="row">
         <!-- SINGLE POST -->
-        <div class="col-lg-offset-1 col-lg-9
-                    col-md-offset-1 col-md-9
-                    col-sm-offset-1 col-sm-9">
+        <div class="col-lg-offset-1 col-lg-9 col-md-offset-1 col-md-9 col-sm-offset-1 col-sm-9">
             <p><img class="img-responsive" src="assets/img/post01.jpg"></p>
             <h3 class="ctitle">Pricing and Services</h3>
             <div class="hline"></div><br><br>
@@ -172,7 +170,5 @@
 <script src="assets/js/jquery.prettyPhoto.js"></script>
 <script src="assets/js/jquery.isotope.min.js"></script>
 <script src="assets/js/custom.js"></script>
-
-
 </body>
 </html>
