navbar menu changes

--- a/freestuff.html
+++ b/freestuff.html
@@ -43,11 +43,17 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">HOME</a></li>
+                <li class="active"><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="services.html">PRICING</a></li>
-                <li><a href="samples.html">SAMPLES</a></li>
-                <li class="active"><a href="freestuff.html">FREE STUFFS</a></li>
+                <li><a href="services.html">SERVICE & PRICING</a></li>
+                <li><a href="showcase.html">SHOWCASE</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">SEE MORE <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="collection.html">MUSIC COLLECTION</a></li>
+                        <li><a href="freestuff.html">FREE STUFFS</a></li>
+                    </ul>
+                </li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -59,7 +65,7 @@
 <div id="blue">
     <div class="container">
         <div class="row">
-            <h3>Pricing and Services</h3>
+            <h3>FREE STUFFS</h3>
         </div><!-- /row -->
     </div><!-- /container -->
 </div><!-- /blue -->
