--- a/collection.html
+++ b/collection.html
@@ -66,7 +66,7 @@
 <div id="blue">
     <div class="container">
         <div class="row">
-            <h3>Portfolio.</h3>
+            <h3>MUSIC COLLECTIONS</h3>
         </div><!-- /row -->
     </div><!-- /container -->
 </div><!-- /blue -->
@@ -78,7 +78,7 @@
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
-            <h2>We create awesome designs to standout your site or product. Check some of our latest works.</h2>
+            <h2>We create music. Check some of our latest works.</h2>
             <br>
 
             <div class="hline"></div>
