--- a/services.html
+++ b/services.html
@@ -71,12 +71,11 @@
 </div><!-- /blue -->
 
 <!-- *****************************************************************************************************************
- BLOG CONTENT
+ CONTENT
  ***************************************************************************************************************** -->
 
 <div class="container mtb">
     <div class="row">
-        <!-- SINGLE POST -->
         <div class="col-lg-offset-1 col-lg-9 col-md-offset-1 col-md-9 col-sm-offset-1 col-sm-9">
             <p><img class="img-responsive" src="assets/img/post01.jpg"></p>
             <h3 class="ctitle">Pricing and Services</h3>
