--- a/showcase.html
+++ b/showcase.html
@@ -65,7 +65,7 @@
 <div id="blue">
     <div class="container">
         <div class="row">
-            <h3>Sample Works</h3>
+            <h3>SHOWCASE</h3>
         </div>
         <!-- /row -->
     </div>
@@ -74,7 +74,7 @@
 <!-- /blue -->
 
 <!-- *****************************************************************************************************************
- TITLE & CONTENT
+ CONTENT
  ***************************************************************************************************************** -->
 
 <div class="container mt">
