--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
                             <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_09.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-link"></i></a>
                         </div><!-- he bg -->
                     </div><!-- he view -->
                 </div><!-- he wrap -->
@@ -138,8 +137,7 @@
                             <h3 class="a1" data-animate="fadeInDown">A Web Design Item</h3>
                             <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_02.jpg" class="dmbutton a2"
                                data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
+                            <a href="freestuff.html" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-link"></i></a>
                         </div><!-- he bg -->
                     </div><!-- he view -->
                 </div><!-- he wrap -->
