--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="services.html">SERVICE & PRICING</a></li>
+                <li><a href="services.html">SERVICE &amp; PRICING</a></li>
                 <li><a href="showcase.html">SHOWCASE</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">SEE MORE <b class="caret"></b></a>
@@ -97,12 +97,9 @@
             <blockquote>
                 <p>&ldquo;Let the music moves your emotion&rdquo;</p>
             </blockquote>
-            <!--<p><br/><a href="contact.html" class="btn btn-theme">Contact Us</a></p>-->
         </div>
-    </div>
-    <! --/row -->
-</div>
-<! --/container -->
+    </div><!--/row -->
+</div><!--/container -->
 
 <!-- *****************************************************************************************************************
  TEAM MEMBERS
@@ -111,8 +108,6 @@
 <div class="container mtb">
     <div class="row centered right">
         <h3 class="mb">MEET OUR TEAM</h3>
-
-
         <div class="composerItem col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="he-wrap tpl6">
                 <img class="img-rounded" width="300px" src="assets/img/team/phil_aboutpg.jpg" alt="">
@@ -121,14 +116,10 @@
                     <div class="bg a0" data-animate="fadeIn">
                         <h3 class="a1" data-animate="fadeInDown">Resume(CV):</h3>
                         <a href="http://goo.gl/15B9CU" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-file"></i></a>
-                    </div>
-                    <!-- he bg -->
-                </div>
-                <!-- he view -->
-            </div>
-            <!-- he wrap -->
+                    </div><!--he bg -->
+                </div><!--he view -->
+            </div><!--he wrap -->
             <h4>Chapavich “Phil” Temnitikul</h4> <div class="hline"></div>
-            <!--<h5 class="ctitle">LEAD DEVELOPER</h5>-->
             <p class="text-justify"> สำเร็จการศึกษาปริญญาตรีด้านการประพันธ์เพลงจากมหาวิทยาลัยรังสิต
                 เคยได้รับทุนการศึกษาจากเยอรมันเพื่อไปเข้าร่วม workshop
                 กับนักแต่งเพลงมีชื่อเสียงด้านดนตรีประกอบภาพยนต์ที่ Hamburg, Germany ในงาน FilmSoundHamburg
@@ -140,7 +131,6 @@
                 Electronic, Experimental, Ambient.
                 <br><br>
                 ปัจจุบันเป็นนักแต่งเพลงอิสระและกำลังศึกษาต่อที่ UCLA สหรัฐอเมริกา ด้านดนตรีประกอบภาพยนต์</p>
-
         </div><!--/col-lg-3 -->
 
         <div class="composerItem col-lg-6 col-md-6 col-sm-12 col-xs-12">
