fixing active page nav

--- a/services.html
+++ b/services.html
@@ -43,9 +43,9 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="services.html">SERVICE & PRICING</a></li>
+                <li class="active"><a href="services.html">SERVICE &amp; PRICING</a></li>
                 <li><a href="showcase.html">SHOWCASE</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">SEE MORE <b class="caret"></b></a>
@@ -65,7 +65,7 @@
 <div id="blue">
     <div class="container">
         <div class="row">
-            <h3>Pricing and Services</h3>
+            <h3>SERVICE &amp; PRICING</h3>
         </div><!-- /row -->
     </div><!-- /container -->
 </div><!-- /blue -->
@@ -78,7 +78,7 @@
     <div class="row">
         <div class="col-lg-offset-1 col-lg-9 col-md-offset-1 col-md-9 col-sm-offset-1 col-sm-9">
             <p><img class="img-responsive" src="assets/img/post01.jpg"></p>
-            <h3 class="ctitle">Pricing and Services</h3>
+            <h3 class="ctitle">SERVICE &amp; PRICING</h3>
             <div class="hline"></div><br><br>
             <h4>LOOP MUSIC</h4>
 
