--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li class="active"><a href="about.html">ABOUT</a></li>
                 <li><a href="services.html">SERVICE &amp; PRICING</a></li>
                 <li><a href="showcase.html">SHOWCASE</a></li>
                 <li class="dropdown">
