--- a/freestuff.html
+++ b/freestuff.html
@@ -43,7 +43,7 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="services.html">SERVICE & PRICING</a></li>
                 <li><a href="showcase.html">SHOWCASE</a></li>
@@ -51,7 +51,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">SEE MORE <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="collection.html">MUSIC COLLECTION</a></li>
-                        <li><a href="freestuff.html">FREE STUFFS</a></li>
+                        <li class="active"><a href="freestuff.html">FREE STUFFS</a></li>
                     </ul>
                 </li>
             </ul>
